# gourmand-api

./: .dockerignore  .gitignore  Dockerfile  Pipfile  alembic.ini  alembic2.ini  certificate.pem  docker-compose-dev.yml  docker-compose.yml  docker_commands.sh  postgres-table-truncates.sql  postgres_insert_for_tests.sql  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ga_api_deploy.yml
g_production_db/: env.py
g_production_db/versions/: 01_6a630cb0012e.py  02_56470f309b5f.py  03_060f6cb78efd_metadata_migration.py  05_4a0ad5570d42_role_creation.py
g_test_db/: env.py
g_test_db/versions/: 03_060f6cb78efd_metadata_migration.py  04_c8cdc2770046_verified_flag.py  51b6153ce783_tables_in_test_db.py
gourmandapiapp/: config.py  db.py  main.py  models.py  oauth2.py  schemas.py  utils.py
gourmandapiapp/routers/: auth.py  authusers.py  business.py  businessholdings.py
gourmandapiapp/static/: gourmand_ai.jfif  index.css
gourmandapiapp/templates/: auth_email_confirm.html  auth_email_confirm.txt  auth_register.html  auth_unverified.html  index.html  login.html
gourmandapiapp/templates/static/: app.js  index.css
gourmandapiapptests/: conftest.py  test_business.py  test_businessholdings.py
gourmandapiapptests/unit/: test_crypto.py  test_models.py
