[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gourmand_api"
authors = [
    {name = "Ronald Davis"}
]
version = "0.0.1"
description = "Practicing some architecture patterns with gourmand_api"
readme  = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
    ]

dependencies = [
    "pytest ==7.1.2",
    "attrs ==21.4.0",
    "coverage ==6.4.1",
    "datetime ==4.4",
    "iniconfig ==1.1.1",
    "pluggy ==1.0.0",
    "py ==1.11.0",
    "pyparsing ==3.0.9",
    "pytest-cov ==3.0.0",
    "pytz ==2022.1",
    "tomli ==2.0.1",
    "zope.interface ==5.4.0",
    "build",
    "sqlalchemy",
]

[tool.setuptools]

zip-safe = true
include-package-data = true

[tool.setuptools.package-dir]
where = "gourmandapiapp"

[tool.setuptools.packages.find]
where = ["gourmandapiapp"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]